--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,7 @@ $section-padding: 1em;
 
 @import "sass/elements/container.sass";
 @import "sass/elements/title.sass";
+@import "sass/elements/table.sass";
 @import "sass/elements/image.sass";
 @import "sass/elements/button.sass";
 @import "sass/elements/icon.sass";
